Fix extra spacing caused by inline-block on the miter

--- a/src/styles/components/textarea.scss
+++ b/src/styles/components/textarea.scss
@@ -51,9 +51,9 @@
 }
 
 .textarea__miter {
-  display: inline-block;
   background-color: var(--background-color);
   cursor: var(--cursor);
+  width: 350px;
 
   @include mixins.miter-bordered-rounded;
 }
@@ -67,7 +67,7 @@
   white-space: pre;
   overflow-wrap: normal;
   cursor: auto;
-  width: 350px;
+  width: 100%;
   height: 125px;
 
   @supports not selector(::-webkit-scrollbar-track) {
